--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "core_rs"
 version = "0.1.0"
 license = "Apache-2.0"
 edition = "2021"
+description = "A library for a core http library for use with coinbase apis"
+repository = "https://github.com/coinbase-samples/core_rs"
+readme = "README.md"
 
 [dependencies]
 reqwest = { version = "0.12", features = ["json"] }
